--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -63,7 +63,10 @@ jobs:
       - name: Run tests with Yaegi
         run: ${{ github.workspace }}/go/bin/yaegi test .
 
-      - uses: codecov/codecov-action@v2
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Test With Traefik
         run: cd test; bash test.sh
